[gd_scene load_steps=11 format=3 uid="uid://b06qil0jy7lbk"]

[ext_resource type="Script" path="res://Scripts/main_scene_manager.gd" id="1_m7d72"]
[ext_resource type="Texture2D" uid="uid://d4hd21uq5bgjp" path="res://Textures/Cerditos.png" id="2_lmqcq"]
[ext_resource type="Texture2D" uid="uid://b8ao12k06au3q" path="res://Textures/pigs_btn_pressed.png" id="3_748n1"]
[ext_resource type="Script" path="res://Scripts/main_camera.gd" id="4_jfmjx"]
[ext_resource type="Script" path="res://Scripts/UI.gd" id="6_sw238"]
[ext_resource type="PackedScene" uid="uid://d3omlsfokgwvt" path="res://Scenes/destination_icon.tscn" id="7_l0ybc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q7xnf"]
albedo_color = Color(0, 0.258824, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_qiqt7"]
material = SubResource("StandardMaterial3D_q7xnf")
size = Vector3(100, -1, 100)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_7aaou"]
data = PackedVector3Array(-50, -0.5, 50, 50, -0.5, 50, -50, 0.5, 50, 50, -0.5, 50, 50, 0.5, 50, -50, 0.5, 50, 50, -0.5, -50, -50, -0.5, -50, 50, 0.5, -50, -50, -0.5, -50, -50, 0.5, -50, 50, 0.5, -50, 50, -0.5, 50, 50, -0.5, -50, 50, 0.5, 50, 50, -0.5, -50, 50, 0.5, -50, 50, 0.5, 50, -50, -0.5, -50, -50, -0.5, 50, -50, 0.5, -50, -50, -0.5, 50, -50, 0.5, 50, -50, 0.5, -50, 50, -0.5, 50, -50, -0.5, 50, 50, -0.5, -50, -50, -0.5, 50, -50, -0.5, -50, 50, -0.5, -50, -50, 0.5, 50, 50, 0.5, 50, -50, 0.5, -50, 50, 0.5, 50, 50, 0.5, -50, -50, 0.5, -50)

[sub_resource type="BoxMesh" id="BoxMesh_o1ghu"]
size = Vector3(4, 1, 1)

[node name="Main Scene" type="Node3D"]
script = ExtResource("1_m7d72")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0635396, 0.997979, 0, -0.997979, 0.0635396, 0, 62.8657, -0.515633)
shadow_enabled = true

[node name="Floor" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_qiqt7")

[node name="StaticBody3D" type="StaticBody3D" parent="Floor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_7aaou")

[node name="Select Unit UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="Select Unit UI"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 208.0
grow_vertical = 2
color = Color(0.443137, 0.443137, 0.443137, 0.443137)

[node name="Unit_1" type="TextureButton" parent="Select Unit UI"]
layout_mode = 0
offset_right = 201.0
offset_bottom = 48.0
toggle_mode = true
texture_normal = ExtResource("2_lmqcq")
texture_pressed = ExtResource("3_748n1")
ignore_texture_size = true
stretch_mode = 0

[node name="MainCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0635396, 0.997979, 0, -0.997979, 0.0635396, 0, 13.8657, -0.515633)
script = ExtResource("4_jfmjx")

[node name="Units Node Container" type="Node3D" parent="."]

[node name="PlaceholderUnitGhost" type="MeshInstance3D" parent="Units Node Container"]
mesh = SubResource("BoxMesh_o1ghu")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("6_sw238")

[node name="TurnStateLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "STATE"

[node name="NextStateButton" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Next"

[node name="DestinationIcon" parent="." instance=ExtResource("7_l0ybc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)

[connection signal="toggled" from="Select Unit UI/Unit_1" to="." method="_on_unit_1_toggled"]
[connection signal="button_up" from="UI/NextStateButton" to="UI" method="_on_next_state_button_button_up"]
